# SmartSheet

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SmartSheet.cpp  SmartSheet.h  main.cpp  vcpkg.json  使用说明.docx
API_source_code/: source_ppocr_API.cpp  source_ppocr_API.h
ErrorHandler/: BaseException.cpp  BaseException.hpp  ErrorHandler.cpp  ErrorHandler.hpp  README.md
capi_wrapper/: README.md  cpp_PersonnelInformation_py_wrapper.cpp  cpp_PersonnelInformation_py_wrapper.h  cpp_QingziClass_py_wrapper.cpp  cpp_QingziClass_py_wrapper.h  cpp_wrapper_header.h
include/: ChineseEncoding.h  Encoding.h  Files.h  Fuzzy.h  PersonnelInformation.h  QingziClass.h  basic.hpp  chstring.hpp  console.h  dll.h  ex.h  excel.h  helper.h  high.h  icu_encoding_handler.h  imgs.h  minizip.h  pdf.h  ppocr_API.h  pugiconfig.hpp  pugixml.hpp  settings.h  test.h  test_for_cv.h  word.h
lib/input/all/: 青书班.xlsx  青公班.xlsx  青峰班.xlsx  青文班.xlsx  青科班.xlsx  青组班.xlsx
lib/input/app/: 青峰班.xlsx  青志班.xlsx  青社班.xlsx  青科班.xlsx  青组班.xlsx
lib/output/app_out/: 青书班.xlsx  青志班.xlsx  青社班.xlsx  青组班.xlsx
others/: README.md  settings.txt
others/input/all/: 青宣班.xlsx  青志班.xlsx  青社班.xlsx  青膺班.xlsx
others/input/app/: 青书班.xlsx  青公班.xlsx  青宣班.xlsx  青文班.xlsx  青膺班.xlsx
others/output/app_out/: 青公班.xlsx  青宣班.xlsx  青峰班.xlsx  青文班.xlsx  青科班.xlsx  青膺班.xlsx
searchingTool/: README.md  message.cpp  message.hpp  searchingMain.cpp  searchingTool.cpp  searchingTool.hpp
space_models/: README.md
src/: ChineseEncoding.cpp  Encoding.cpp  Files.cpp  Fuzzy.cpp  PersonnelInformation.cpp  QingziClass.cpp  chstring.cpp  console.cpp  dll.cpp  ex.cpp  excel.cpp  helper.cpp  icu_encoding_handler.cpp  imgs.cpp  main.cpp  pdf.cpp  ppocr_API.cpp  pugixml.cpp  settings.cpp  test.cpp  test_for_cv.cpp  word.cpp
test/: test.cpp  test.h  test_for_chstring.cpp  test_for_chstring.h  test_for_pdfium.cpp  test_for_pdfium.h  test_for_poppler.cpp  test_for_poppler.h  test_for_ui.cpp  test_for_ui.h
xlnt/lib/Debug/: xlntd.exp
xlnt/lib/Release/: xlnt.exp
